Fixed Overflow, Renamed depedencies

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@ body {
     color: #000;
     background-color: #fff;
     overflow-x: hidden;
+    overflow-y: hidden;
+
 }
 
 
